	  Implemented ToSigFig.  StringToLongreal improved to
	  minimise floating point operators.  LongrealToString
	  now allows TotalWidth of zero in which case it keeps
	  converting until the precision is exhausted.
	* gm2/gm2-libs/cbuiltin.def:  new definitions log10f,
	  log10, log10l, exp10, exp10l, exp10f.
	* gm2/gm2-libs/libm.def:  new definitions exp10, exp10l,
	  exp10f.

2008-12-15       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/MathLib0.def:  included definitions for
	  expl, lnl, tanl, arctanl.
	* gm2/gm2-libs/MathLib0.mod:  implemented above functions
	  and also modified logs to use libm.logf, tanl to use
	  libm.tanl, arctans to use libm.atanf and arctanl to
	  use libm.atanl.

2008-12-13       Gaius Mulley <gaius@gnu.org>

	* testsuite/gm2/pimlib/logitech/run/pass
	  added runtime tests to check the values of REAL and
	  LONGREALs once converted.
	* gm2/gm2-libs/FormatStrings.mod:  tidied up comments.
	* gm2/gm2-libs/MathLib0.def:  entierl (new function).
	* gm2/gm2-libs/MathLib0.mod:  entierl implement
	  (new function).
	* gm2/gm2-libs/StringConvert.def:  added example of
	  use to the comments.
	* gm2/gm2-libs/StringConvert.mod:  DetermineSafeTruncation
	  tidied up comments and added examples, fixed bugs.
	* gm2/gm2-libs-pim/RealConversions.def:  tided up comments
	  and added examples.  LongRealToString and ReadToString
	  now take an INTEGER width which matches the Logitech
	  definitions.
	* gm2/gm2-libs-pim/RealConversions.mod:  RealToString and
	  LongRealToString modified width parameter to take an INTEGER.
	  Reimplemented much of LongRealToString and altered its
	  definition to make it simpler to use.

2008-12-05       Gaius Mulley <gaius@gnu.org>

	* fixed bug reported by Steve Giess <scgiess@hotmail.com>
	  which showed const+realvar was not converted to the
	  required REAL/LONGREAL/SHORTREAL type when passed
	  to a procedure.
	* gm2/gm2-compiler/M2GenGCC.mod:  ensure that actual