@@ -802,19 +802,19 @@ stage3/gm2/cc1gm2$(exeext): stage2/gm2/cc1gm2$(exeext) gm2/gm2-compiler-paranoid
                             $(LIBSTDCXX)
 	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ $(GM2_OBJS) $(GM2_LIBS_PARANOID) \
                               gm2/gm2-compiler-paranoid/m2flex.o $(BACKEND) $(LIBS) \
-                              $(LIBSTDCXX)
+                              $(LIBSTDCXX) -lm
   
 stage2/gm2/cc1gm2$(exeext): stage1/gm2/cc1gm2$(exeext) gm2/gm2-compiler/m2flex.o $(P) \
                             $(GM2_OBJS) $(BACKEND) $(LIBDEPS) $(GM2_LIBS) \
                             $(LIBSTDCXX)
 	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ $(GM2_OBJS) $(GM2_LIBS) \
                               gm2/gm2-compiler/m2flex.o $(BACKEND) $(LIBS) \
-                              $(LIBSTDCXX)
+                              $(LIBSTDCXX) -lm
   
 stage1/gm2/cc1gm2$(exeext): $(GM2_DIRS) $(GM2)$(exeext) gm2/gm2-compiler-boot/m2flex.o \
                            $(P) $(GM2_OBJS) $(BACKEND) $(LIBDEPS) $(GM2_LIBS_BOOT)
 	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ $(GM2_OBJS) $(GM2_LIBS_BOOT) \
-                             gm2/gm2-compiler-boot/m2flex.o $(BACKEND) $(LIBS)
+                             gm2/gm2-compiler-boot/m2flex.o $(BACKEND) $(LIBS) -lm
 
 # Compiling object files from source files.
   
@@ -1781,7 +1781,7 @@ stage1/gm2/gm2l$(exeext): gm2/p2c/p2c-src/src/libp2c.a \
 	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ \
               gm2/gm2-compiler-boot/gm2l_init.o \
               gm2/gm2-compiler-boot/m2flex.o \
-              gm2/gm2-compiler-boot/gm2l.o $(GM2_LIBS_BOOT) $(LIBS)
+              gm2/gm2-compiler-boot/gm2l.o $(GM2_LIBS_BOOT) $(LIBS) -lm
 
 stage1/gm2/gm2lcc$(exeext): gm2/p2c/p2c-src/src/libp2c.a \
      gm2/boot-bin/mklink$(exeext) gm2/boot-bin/p2c$(exeext) \
@@ -1792,7 +1792,7 @@ stage1/gm2/gm2lcc$(exeext): gm2/p2c/p2c-src/src/libp2c.a \
 	$(CC) -c -g gm2/gm2-compiler-boot/gm2lcc_init.c -o gm2/gm2-compiler-boot/gm2lcc_init.o
 	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ \
               gm2/gm2-compiler-boot/gm2lcc_init.o \
-              gm2/gm2-compiler-boot/gm2lcc.o $(GM2_LIBS_BOOT) $(LIBS)
+              gm2/gm2-compiler-boot/gm2lcc.o $(GM2_LIBS_BOOT) $(LIBS) -lm
 
 stage1/gm2/gm2lgen$(exeext): gm2/p2c/p2c-src/src/libp2c.a \
      gm2/boot-bin/mklink$(exeext) gm2/boot-bin/p2c$(exeext) \
@@ -1802,7 +1802,7 @@ stage1/gm2/gm2lgen$(exeext): gm2/p2c/p2c-src/src/libp2c.a \
 	$(CC) -c -g gm2/gm2-compiler-boot/gm2lgen_init.c -o gm2/gm2-compiler-boot/gm2lgen_init.o
 	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ \
               gm2/gm2-compiler-boot/gm2lgen_init.o \
-              gm2/gm2-compiler-boot/gm2lgen.o $(GM2_LIBS_BOOT) $(LIBS)
+              gm2/gm2-compiler-boot/gm2lgen.o $(GM2_LIBS_BOOT) $(LIBS) -lm
 
 stage1/gm2/gm2lorder$(exeext): gm2/p2c/p2c-src/src/libp2c.a \
      gm2/boot-bin/mklink$(exeext) gm2/boot-bin/p2c$(exeext) \
@@ -1813,7 +1813,7 @@ stage1/gm2/gm2lorder$(exeext): gm2/p2c/p2c-src/src/libp2c.a \
 	$(CC) -c -g gm2/gm2-compiler-boot/gm2lorder_init.c -o gm2/gm2-compiler-boot/gm2lorder_init.o
 	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ \
               gm2/gm2-compiler-boot/gm2lorder_init.o \
-              gm2/gm2-compiler-boot/gm2lorder.o $(GM2_LIBS_BOOT) $(LIBS)
+              gm2/gm2-compiler-boot/gm2lorder.o $(GM2_LIBS_BOOT) $(LIBS) -lm
 
 stage1/gm2/gm2m$(exeext): gm2/p2c/p2c-src/src/libp2c.a \
      gm2/boot-bin/mklink$(exeext) gm2/boot-bin/p2c$(exeext) \
@@ -1826,7 +1826,7 @@ stage1/gm2/gm2m$(exeext): gm2/p2c/p2c-src/src/libp2c.a \
 	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ \
               gm2/gm2-compiler-boot/gm2m_init.o \
               gm2/gm2-compiler-boot/m2flex.o \
-              gm2/gm2-compiler-boot/gm2m.o $(GM2_LIBS_BOOT) $(LIBS)
+              gm2/gm2-compiler-boot/gm2m.o $(GM2_LIBS_BOOT) $(LIBS) -lm
 
 stage1/gm2/gm2cc$(exeext): g++$(exeext)
 	cp -p g++$(exeext) $@
@@ -1892,7 +1892,7 @@ stage1/gm2/h2def$(exeext): gm2/p2c/p2c-src/src/libp2c.a \
               gm2/gm2-compiler-boot/cflex.o \
               gm2/gm2-compiler-boot/CLexBuf.o \
               gm2/gm2-compiler-boot/h2def_init.o \
-              gm2/gm2-compiler-boot/h2def.o $(GM2_LIBS_BOOT) $(LIBS)
+              gm2/gm2-compiler-boot/h2def.o $(GM2_LIBS_BOOT) $(LIBS) -lm
 
 stage2/gm2/h2def$(exeext): $(GM2_LIBS) $(GM2_LINK_TOOLS_BOOT) \
                            gm2/gm2-compiler/cflex.o \
